--- a/pages/emoCardsAmazed.html
+++ b/pages/emoCardsAmazed.html
@@ -19,40 +19,96 @@
                 <a class="btn btn-outline-main c-btn" href="emoCardsClassified.html">返回</a>
             </div>
         </div>
-        <div class="d-flex flex-wrap mb-72">
-            <button type="button" class="class-card me-16 bg-amazed link-gray-900 class-card-amazed" data-bs-toggle="modal" data-bs-target="#amazed01">
-                <p>錯&nbsp;愕</p>
-                <div class="img-box">
-                  <img src="https://wavemocards.com/frontend/upload/05-amazed/amazed01-stunned.svg" alt="amazed">
-                </div>
-            </button>
-            <button type="button" class="class-card me-16 bg-amazed link-gray-900 class-card-amazed" data-bs-toggle="modal" data-bs-target="#amazed02">
-                <p>驚&nbsp;訝</p>
-                <div class="img-box">
-                  <img src="https://wavemocards.com/frontend/upload/05-amazed/amazed02-astonishment.svg" alt="amazed">
-                </div>
-            </button>
-            <button type="button" class="class-card me-16 bg-amazed link-gray-900 class-card-amazed" data-bs-toggle="modal" data-bs-target="#amazed03">
-                <p>驚&nbsp;喜</p>
-                <div class="img-box">
-                  <img src="https://wavemocards.com/frontend/upload/05-amazed/amazed03-surprised.svg" alt="amazed">
-                </div>
-            </button>
-            <button type="button" class="class-card me-16 bg-amazed link-gray-900 class-card-amazed" data-bs-toggle="modal" data-bs-target="#amazed04">
-                <p>震&nbsp;驚</p>
-                <div class="img-box">
-                  <img src="https://wavemocards.com/frontend/upload/05-amazed/amazed04-shocked.svg" alt="amazed">
-                </div>
-            </button>
+        <div class="d-flex flex-wrap mb-72" id="amazedCards">
         </div>
       </div>
     </main>
 
     <%- include('./layout/floatButton') -%>
     
-    <%- include('./layout/modalEmoCards'); -%>
+    <!-- modalEmoCards -->
+    <ul class="list">
+      <li></li>
+    </ul>
     <%- include('./layout/footer'); -%>
 
     <%- include('./layout/baseJs'); -%>
+    <script>
+      let imgAmazed01 = "https://wavemocards.com/frontend/upload/05-amazed/amazed01-stunned.svg";
+      let imgAmazed02 = "https://wavemocards.com/frontend/upload/05-amazed/amazed02-astonishment.svg";
+      let imgAmazed03 = "https://wavemocards.com/frontend/upload/05-amazed/amazed03-surprised.svg";
+      let imgAmazed04 = "https://wavemocards.com/frontend/upload/05-amazed/amazed04-shocked.svg";
+
+      const amazedCards = document.querySelector('#amazedCards');
+      const listModal = document.querySelector('.list');
+
+      axios.get("http://api.wavemocards.com/emotions?requirement=cards")
+      .then(function(response){
+        let aryData = Object.values(response.data);
+        initAmazedCards()
+        function initAmazedCards() {
+          let strCards = "";
+          let strModal = "";
+          let emo;
+          aryData.forEach(function(data, i){
+            let imgSrc;
+            if(data.Category == "驚訝"){
+              emo = "amazed";
+              if(data.Name == "錯愕") {
+                imgSrc = imgAmazed01;
+              } else if (data.Name == "驚訝") {
+                imgSrc = imgAmazed02;
+              } else if (data.Name == "驚喜") {
+                imgSrc = imgAmazed03;
+              } else if (data.Name == "震驚") {
+                imgSrc = imgAmazed04;
+              }
+              let contentCards = `
+                <button type="button" class="class-card me-16 bg-${emo} link-gray-900 class-card-${emo}" data-bs-toggle="modal" data-bs-target="#emo${i}">
+                  <p>${data.Name[0]}&nbsp;${data.Name[1]}</p>
+                  <div class="img-box">
+                    <img src="${imgSrc}}" alt="${data.Name}">
+                  </div>
+                </button>`;
+              let contentModals = `
+                <li>
+                  <div class="modal fade px-32" id="emo${i}" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                    <div class="modal-dialog modal-dialog-centered c-modal-xl-card">
+                      <div class="modal-content bg-${emo}" id="cardBgColor">
+                        <div class="modal-body d-flex justify-content-between align-items-center">
+                          <div class="text">
+                            <div class="title w-100 mb-20 d-flex justify-content-between  align-items-end">
+                              <h2>${data.Name}</h2>
+                              <a href="modifyEmoCard.html" role="button">
+                                  <i class="bi bi-pencil-square"></i>
+                              </a>
+                            </div>
+                            <div class="mb-16">
+                              <h3 class="mb-4">意思：</h3>
+                              <p>${data.Description}</p>
+                            </div>
+                            <div>
+                              <h3 class="mb-4">例句：</h3>
+                              <p>${data.Example}</p>
+                            </div>
+                          </div>
+                          <div class="img">
+                            <img class="w-100" src="${imgSrc}" alt="${data.Name}">
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </li>`;
+              strCards+=contentCards;
+              strModal+=contentModals;
+            }
+          })
+          amazedCards.innerHTML = strCards;
+          listModal.innerHTML = strModal;
+        }
+      })
+
+    </script>
   </body>
 </html>
